// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`panel create 1`] = `
<div class="weui-panel weui-panel_access">
  <div class="weui-panel__bd"></div>
  <div class="weui-panel__ft"></div>
</div>
`;

exports[`panel render with title 1`] = `
<div class="weui-panel weui-panel_access">
  <div class="weui-panel__hd">test-title</div>
  <div class="weui-panel__bd"></div>
  <div class="weui-panel__ft"></div>
</div>
`;
